documentacion/01-InstalacionOpenstack/openstack-ansible/kubernetes/deployment-set/tmp/07-wordpress-cephfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.8-apache
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: wordpress-content
              mountPath: /var/www/html
        - name: mariadb
          image: mariadb:11.4
          ports:
            - name: mysql
              containerPort: 3306
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 700m
              memory: 1Gi
          volumeMounts:
            - name: wordpress-db
              mountPath: /var/lib/mysql
        - name: redis
          image: redis:7.4
          args:
            - redis-server
            - --appendonly
            - "yes"
            - --dir
            - /data
          ports:
            - name: redis
              containerPort: 6379
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: wordpress-redis
              mountPath: /data
      volumes:
        - name: wordpress-content
          persistentVolumeClaim:
            claimName: wordpress-content
        - name: wordpress-db
          persistentVolumeClaim:
            claimName: wordpress-db
        - name: wordpress-redis
          persistentVolumeClaim:
            claimName: wordpress-redis
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
